Microscopes/ProChipMicroscopeJoystick/log/ProChipJoystickApp_log_191216_192235.txt
2019-12-16T19:22:35|CRITICAL|root|Unhandled exception:Traceback (most recent call last):
  File "C:\LabPrograms\Python\Microscopes\ProChipMicroscopeJoystick\ProChipJoystickApp.py", line 25, in <module>
    app = ProChipJoystickApp(sys.argv)
  File "C:\LabPrograms\Python\BaseMicroscopeModified_ScopeFoundry\BaseMicroscopeAppModified.py", line 16, in __init__
    super().__init__(*kwds) # *kwds is needed since in the main we pass as argument sys.argv. Without
  File "C:\ProgramData\Anaconda3\lib\site-packages\ScopeFoundry\base_app.py", line 332, in __init__
    self.setup()
  File "C:\LabPrograms\Python\Microscopes\ProChipMicroscopeJoystick\ProChipJoystickApp.py", line 18, in setup
    from Microscopes.ProChipMicroscopeJoystick.CameraJoystickMeasurement import HamamatsuMeasurement
  File "C:\LabPrograms\Python\Microscopes\ProChipMicroscopeJoystick\CameraJoystickMeasurement.py", line 114
    + self.sensitivity_dict[self.settings['sensitivity']]*(1 + self.joystick_hw.joystick_dev.get_axis_values(AXIS_R2)) \
                                                                                                                            ^
SyntaxError: unexpected character after line continuation character

